plugins {
    id 'org.springframework.boot' version '2.4.1'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

group = 'com.bootx'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
    mavenCentral()
    maven {
        url 'http://maven.aliyun.com/nexus/content/groups/public'
    }
}

dependencies {


    compile group: 'cn.hutool', name: 'hutool-all', version: '5.5.2'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.1'
    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.20'
    compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: '2.4.1'
    compile group: 'org.im4java', name: 'im4java', version: '1.4.0'
    compile group: 'commons-codec', name: 'commons-codec', version: '1.15'
    compile group: 'org.bouncycastle', name: 'bcprov-jdk15', version: '1.46'
    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.4.1'
    compile group: 'net.sf.ehcache', name: 'ehcache', version: '2.10.6'

    compile group: 'org.apache.shiro', name: 'shiro-ehcache', version: '1.7.0'
    compile group: 'org.apache.shiro', name: 'shiro-spring', version: '1.7.0'
    compile group: 'org.apache.shiro', name: 'shiro-web', version: '1.7.0'
    compile group: 'org.apache.shiro', name: 'shiro-core', version: '1.7.0'


    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
    compile group: 'org.jxls', name: 'jxls', version: '2.9.0'
    compile group: 'org.jxls', name: 'jxls-poi', version: '2.9.0'
    compile group: 'org.apache.poi', name: 'poi', version: '4.1.2'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
    compile group: 'com.github.penggle', name: 'kaptcha', version: '2.3.2'

    compile group: 'org.apache.commons', name: 'commons-email', version: '1.5'

    compile group: 'com.aliyun', name: 'aliyun-java-sdk-core', version: '4.5.17'
    compile group: 'com.aliyun', name: 'aliyun-java-sdk-sts', version: '3.0.2'
    compile 'com.aliyun.oss:aliyun-sdk-oss:3.10.2'

    compile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.46.0'
    compile group: 'net.sourceforge.htmlunit', name: 'htmlunit-core-js', version: '2.46.0'

    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'

    dependencies { compile fileTree(dir:'libs',include:['*.jar'])}

    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-elasticsearch', version: '2.4.1'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.4.1'



    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'mysql:mysql-connector-java'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}
